[gd_scene load_steps=31 format=3 uid="uid://buqu4u5q10vbs"]

[ext_resource type="Script" uid="uid://ct3370r55isra" path="res://scripts/entitys/player.gd" id="1_ur7pv"]
[ext_resource type="Resource" uid="uid://41p1g61qqiiq" path="res://scripts/stats/entity_stats/player_stats.tres" id="2_3v2ag"]
[ext_resource type="Texture2D" uid="uid://oiigkvmkmb0k" path="res://assets/20260103test_farmer.png" id="2_d2wvv"]
[ext_resource type="Script" uid="uid://b0p3e8r1p1a1f" path="res://scripts/hurtbox.gd" id="3_d2wvv"]
[ext_resource type="Resource" uid="uid://d0jflqhon5bg0" path="res://scripts/inventory/inventory_types/inventory_12slots.tres" id="3_f1ej7"]
[ext_resource type="Script" uid="uid://g3ewxx0o313" path="res://scripts/stats/attack_stats/attack_stats.gd" id="3_jej6c"]
[ext_resource type="Script" uid="uid://fpbnf5elvx8j" path="res://scripts/find_shape.gd" id="4_3v2ag"]
[ext_resource type="Resource" uid="uid://dnjryuv5dwbfd" path="res://scripts/stats/find_shape_stats/test_shape_stats.tres" id="5_jej6c"]
[ext_resource type="Texture2D" uid="uid://bhoe4iff6avs3" path="res://assets/20251126test_shield_smallF.png" id="5_qfm1y"]
[ext_resource type="Script" uid="uid://s0ddp1cmrgfc" path="res://scripts/attack.gd" id="6_f1ej7"]
[ext_resource type="Animation" uid="uid://d4jy5tocquctc" path="res://animations/attack_test.res" id="6_fulsm"]
[ext_resource type="Texture2D" uid="uid://d3m4luf37oty7" path="res://assets/20251201test_sword_small+diagonal_thrust.png" id="7_4r5pv"]
[ext_resource type="Texture2D" uid="uid://dandg4ynyr5vb" path="res://assets/20251201test_sword_small+diagonal_swipe.png" id="8_60mlk"]
[ext_resource type="Script" uid="uid://dyynb02ipdjsg" path="res://scripts/interact_area.gd" id="10_y4r1p"]
[ext_resource type="PackedScene" uid="uid://fapors14lwva" path="res://scripts/inventory/inventory_ui/inventory_ui.tscn" id="11_d2wvv"]
[ext_resource type="Script" uid="uid://dda1aatq0u6cu" path="res://scripts/healthbar.gd" id="12_oprun"]
[ext_resource type="PackedScene" uid="uid://cboiknrur5hvg" path="res://scenes/dialogBox.tscn" id="16_a8ls1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qfm1y"]
resource_local_to_scene = true

[sub_resource type="Resource" id="Resource_fulsm"]
resource_local_to_scene = true
script = ExtResource("3_jej6c")
damage = 0
cooldown = 3.0
attack_time = 1.0
hitbox = SubResource("RectangleShape2D_qfm1y")
weapon = ExtResource("5_qfm1y")
offset = Vector2(15, 0)
sprite_rotation = -1.571
hitbox_rotation = 0.0
rotation = 0.0
metadata/_custom_type_script = "uid://g3ewxx0o313"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4r5pv"]
resource_local_to_scene = true
size = Vector2(25, 6)

[sub_resource type="Resource" id="Resource_60mlk"]
resource_local_to_scene = true
script = ExtResource("3_jej6c")
damage = 3
cooldown = 2.0
attack_time = 0.3
hitbox = SubResource("RectangleShape2D_4r5pv")
anim = ExtResource("6_fulsm")
weapon = ExtResource("7_4r5pv")
offset = Vector2(20, 0)
sprite_rotation = 0.785
hitbox_rotation = 0.0
rotation = 0.0
metadata/_custom_type_script = "uid://g3ewxx0o313"

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ecivy"]
height = 40.0

[sub_resource type="Resource" id="Resource_i4ail"]
resource_local_to_scene = true
script = ExtResource("3_jej6c")
damage = 1
cooldown = 0.5
attack_time = 0.3
hitbox = SubResource("CapsuleShape2D_ecivy")
weapon = ExtResource("8_60mlk")
offset = Vector2(15, 0)
sprite_rotation = 0.0
hitbox_rotation = 0.0
rotation = 0.0
metadata/_custom_type_script = "uid://g3ewxx0o313"

[sub_resource type="AtlasTexture" id="AtlasTexture_y4r1p"]

atlas = ExtResource("2_d2wvv")
region = Rect2(40, 5, 17, 22)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ij6vw"]
size = Vector2(14, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ged13"]
resource_local_to_scene = true
bg_color = Color(1, 0, 0, 0.392157)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 0.392157)
corner_detail = 1
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ad58j"]
resource_local_to_scene = true
bg_color = Color(0, 1, 0, 0.784314)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 0.588235)
corner_detail = 1
anti_aliasing = false

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2ue4q"]

[sub_resource type="CircleShape2D" id="CircleShape2D_d2wvv"]
radius = 1.0

[sub_resource type="CircleShape2D" id="CircleShape2D_y4r1p"]
radius = 15.0

[node name="player" type="CharacterBody2D"]
y_sort_enabled = true
disable_mode = 2
motion_mode = 1
script = ExtResource("1_ur7pv")
stats = ExtResource("2_3v2ag")
inventory = ExtResource("3_f1ej7")
attacks = Array[ExtResource("3_jej6c")]([SubResource("Resource_fulsm"), SubResource("Resource_60mlk"), SubResource("Resource_i4ail")])

[node name="Sprite2D_test" type="Sprite2D" parent="."]
texture_filter = 1
texture = SubResource("AtlasTexture_y4r1p")
offset = Vector2(0, -12)

[node name="find_shape" type="Line2D" parent="."]
position = Vector2(0, -11)
width = 2.0
default_color = Color(1, 1, 1, 0.2)
script = ExtResource("4_3v2ag")
shape_stats = ExtResource("5_jej6c")

[node name="phys" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ij6vw")

[node name="attack" type="Node2D" parent="."]
position = Vector2(0, -8)
script = ExtResource("6_f1ej7")

[node name="healthbar" type="ProgressBar" parent="."]
light_mask = 2
z_index = 1
texture_filter = 1
offset_left = -9.0
offset_top = -26.0
offset_right = 63.0
offset_bottom = -10.0
scale = Vector2(0.25, 0.25)
theme_override_styles/background = SubResource("StyleBoxFlat_ged13")
theme_override_styles/fill = SubResource("StyleBoxFlat_ad58j")
max_value = 10.0
step = 1.0
value = 5.0
show_percentage = false
script = ExtResource("12_oprun")
metadata/_edit_use_anchors_ = true

[node name="Hurtbox" type="Area2D" parent="."]
script = ExtResource("3_d2wvv")

[node name="hurt_shape" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, -11)
scale = Vector2(0.9, 0.7)
shape = SubResource("CapsuleShape2D_2ue4q")
debug_color = Color(1, 0, 0, 0.313726)

[node name="Interact_Area" type="Area2D" parent="."]
monitoring = false
script = ExtResource("10_y4r1p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interact_Area"]
shape = SubResource("CircleShape2D_d2wvv")
disabled = true

[node name="Pickup_Area" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2
script = ExtResource("10_y4r1p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pickup_Area"]
position = Vector2(0, -10)
shape = SubResource("CircleShape2D_y4r1p")

[node name="Inventory_UI" parent="." instance=ExtResource("11_d2wvv")]
visible = false
z_index = 4
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -60.0
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
metadata/_edit_use_anchors_ = true

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4, 4)

[node name="DialogBox" parent="." instance=ExtResource("16_a8ls1")]
visible = false
position = Vector2(-3, 76)
